--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -15,7 +15,7 @@ tasks:
     - checkout  # clone the git repo
     - run: pip install telebot flask pymongo aiohttp python-telegram-bot psutil  # install dependencies
     - commands:
-      - chmod +x xxxx  # set execute permission
+      - chmod +x Moin  # set execute permission
       - |
         while true; do 
           echo "CPU Usage: $(top -bn1 | grep 'Cpu(s)' | awk '{print $2 + $4}')%" 
