--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -1,22 +1,28 @@
-global:
-  runner:
-    os_image: ubuntu
+name: Run Titan Script
 
-tasks:
-  setup:
-    steps:
-      - run: apt-get update && apt-get install -y python3 python3-pip
-      - run: |
-          pip3 install \
-            telebot \
-            flask \
-            pymongo \
-            aiohttp \
-            python-telegram-bot
+pipeline:
+  trigger: manual  # or on: [push, pull_request]
 
-  execute:
-    steps:
-      - run: |
-          chmod +x Moin && \
-          echo "Starting titan.py execution" && \
-          python3 titan.py
+  steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+
+    - name: Set Permissions for Moin
+      run: |
+        if [ -f "Moin" ]; then
+          chmod +x Moin
+          echo "Permissions set for Moin"
+        else
+          echo "Error: Moin file not found!"
+          exit 1
+        fi
+
+    - name: Execute titan.py
+      run: |
+        if [ -f "titan.py" ]; then
+          echo "Starting titan.py execution"
+          python3 titan.py || { echo "Error: titan.py failed to execute."; exit 1; }
+        else
+          echo "Error: titan.py not found!"
+          exit 1
+        fi
