--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -14,11 +14,17 @@ tasks:
     steps:
       - checkout  # clone the git repo
 
+      # Ensure the go.sum file exists
+      - run: touch go.sum  # Create an empty go.sum if it doesn't exist
+
       # Restore necessary dependencies
       - cache/pull: go-dep-{{ checksum "go.sum" }}
 
       # Fetch code dependencies
       - run: go mod vendor
+
+      # Install Python dependencies from requirements.txt
+      - run: pip install -r requirements.txt
 
       # Execute titan.py script
       - run: |
